# hwp_helper

./: .gitignore  PRD.md  README.md  REFACTORING_GUIDE.md  build_with_pack.py  build_with_spec.py  callback.py  classes.py  components.py  components_flet.py  core.py  core_flet.py  features.py  features_flet.py  functions.py  gif_class.py  hwp_helper.py  hwp_helper.spec  main.py  main.spec  navibar.py  navibar_flet.py  packaging_app.py  pyproject.toml  setting.yaml  templates.py  templates_flet.py  test.hwp  version_info.txt
backup_old_structure_20250919_105321/: callback.py  components.py  features.py  functions.py  navibar.py  packaging_app.py
hooks/: hook-pythoncom.py
hwp_helper/: __init__.py
hwp_helper/callbacks/: __init__.py  hwp_callbacks.py
hwp_helper/core/: __init__.py  app_manager.py  config.py  helper.py
hwp_helper/services/: __init__.py  file_service.py  hwp_operations.py  template_service.py
hwp_helper/ui/: __init__.py  main_window.py
hwp_helper/ui/components/: __init__.py  dialogs.py  font_manager.py  navigation.py
hwp_helper/ui/pages/: __init__.py  features.py  templates.py
hwp_helper/utils/: __init__.py  com_utils.py  file_utils.py  image_utils.py  window_utils.py
tutorials/: tutorial.qmd
