[project]
name = "hwp-helper"
version = "0.3.3"
description = "한글을 사용하기 쉽게 만들기 위한 지원 도구 - A helper tool for easier use of Hangul Word Processor"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "freed", email = "you@example.com" }
]
keywords = ["hwp", "hangul", "word-processor", "gui", "flet", "korean"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "flet>=0.28.0",
    "hwpapi>=0.0.2.1",
    "pywin32>=306; sys_platform == 'win32'",
    "pywin32-ctypes>=0.2.0; sys_platform == 'win32'",
    "PyYAML>=6.0.2",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=5.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
build = [
    "build>=0.10.0",
    "twine>=4.0.0",
]

[tool.flet]
org = "com.hwphelper"
product = "HwpHelper"
company = "HWP Helper Team"
copyright = "Copyright (C) 2025 by HWP Helper Team"

[tool.flet.app]
path = "."
module = "main"
assets_dir = "src"

[tool.flet.app.windows]
include_packages = [
    "win32com", 
    "pythoncom", 
    "pywintypes", 
    "win32api", 
    "win32gui", 
    "win32con",
    "win32com.client",
    "pywin32_system32"
]
hidden_imports = [
    "win32com.client", 
    "pythoncom", 
    "pywintypes",
    "win32timezone",
    "win32com.shell",
    "win32com.propsys",
    "win32com.taskscheduler"
]
# Additional PyInstaller options for better COM support
pyinstaller_options = [
    "--collect-all=pywin32",
    "--collect-all=pythoncom", 
    "--collect-all=pywintypes",
    "--hidden-import=win32timezone",
    "--add-data=pywin32_system32;pywin32_system32"
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel", "setuptools-scm>=8.0.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
hwp-helper = "main:main"

[project.gui-scripts]
hwp-helper-gui = "main:main"

[project.urls]
Homepage = "https://github.com/freed/hwp-helper"
Repository = "https://github.com/freed/hwp-helper.git"
Issues = "https://github.com/freed/hwp-helper/issues"
Documentation = "https://github.com/freed/hwp-helper/blob/main/README.md"

# Tool configurations
[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=hwp_helper",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["hwp_helper"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/build/*",
    "*/dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]